--- a/_sass/dc/_settings_global.scss
+++ b/_sass/dc/_settings_global.scss
@@ -329,7 +329,7 @@ $accordion-navigation-active-bg-color: $grey-1;
 // $accordion-navigation-font-family: $body-font-family;
 
 // $accordion-content-padding: $column-gutter/2;
-$accordion-content-active-bg-color: $body-bg;
+$accordion-content-active-bg-color: $grey-1;
 
 // 02. Alert Boxes
 // - - - - - - - - - - - - - - - - - - - - - - - - -
