--- a/_sass/_02_settings_typography.scss
+++ b/_sass/_02_settings_typography.scss
@@ -22,7 +22,7 @@ $base-line-height: 1.5 !default;
 
 
 $font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-family-serif: "Volkhov", Georgia, Times, serif;
+$font-family-serif: "Rokkitt", Georgia, Times, serif;
 $font-family-monospace: "Lucida Console", Monaco, monospace;
 
 $body-font-family: $font-family-sans-serif;
