--- a/_includes/people/kuzak_mateusz.html
+++ b/_includes/people/kuzak_mateusz.html
@@ -1,4 +1,4 @@
-<p id="kuzak.mateusz" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/kuzak.mateusz.jpg' alt='Mateusz Kuzak' />">
+<p id="kuzak_mateusz" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/kuzak_mateusz.jpg' alt='Mateusz Kuzak' />">
     <a href="https://github.com/mkuzak" class="person">Mateusz Kuzak</a>
     is eScience Research Engineer working at the Netherlands eScience
     Center. He has background in bioinformatics and live cell imaging,
