--- a/_includes/people/jacobs_christian.html
+++ b/_includes/people/jacobs_christian.html
@@ -1,7 +1,6 @@
 <p id="jacobs_christian" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/jacobs_christian.jpg' alt='Christian Jacobs' />">
     <a href="http://christianjacobs.uk" class="person">Christian Jacobs</a>
-    is a postdoctoral researcher in the Applied Modelling and
-    Computation Group at Imperial College London. His research is in
+    is a postdoctoral researcher in the Faculty of Engineering and the Environment at the University of Southampton. His research is primarily in
     the field of computational fluid dynamics, and currently focusses
     on multiphase flow modelling and the automated solution of
     partial differential equations using code generation. In addition to
