--- a/_includes/people/crouch_s.html
+++ b/_includes/people/crouch_s.html
@@ -6,4 +6,6 @@
     the <a href="http://www.soton.ac.uk">University of
     Southampton</a>. He assists researchers and their communities by
     consulting on software that is integral to their research.
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
