--- a/_includes/orgs/umiami.html
+++ b/_includes/orgs/umiami.html
@@ -1,5 +1,5 @@
 <p class="imgpar" id="umiami">
   <img src="{{site.filesurl}}/orgs/umiami.jpg" alt="University of Miami" />
-  The <a href="http://welcome.miami.edu/">University of Miami</a>
-  has partnered with us through the Center for Computational Science in collaboration with the Graduate School and UM's CTSI.
+A vibrant and diverse academic community, the <a href="http://welcome.miami.edu/">University of Miami</a> has rapidly progressed to become one of America's top research universities. It has partnered with us through its Center for Computational Science in collaboration with the Graduate School and UM's CTSI. 
+
 </p>
