--- a/_includes/people/walker_andrew.html
+++ b/_includes/people/walker_andrew.html
@@ -1,6 +1,6 @@
 <p id="walker_andrew" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/walker_andrew.jpg' alt='Andrew Walker' />">
     <a href="http://www.see.leeds.ac.uk/people/a.walker" class="person">Andrew Walker</a>
-     is a computational geophysicist at the University of Leeds. After
+     is an Associate Professor in computational geophysics at the University of Leeds. After
      a degree in geology, a PhD in mineral physics, and ten years of
      postdoctoral research, he now holds a personal fellowship from
      the Natural Environment Research Council in the Institute of
