adding ashwin srinath as shell-novice maintainer and removing christina koch

--- a/_includes/people/srinath_ashwin.html
+++ b/_includes/people/srinath_ashwin.html
@@ -6,5 +6,6 @@
     works with Python as much as possible, but can be persuaded to
     code in C, C++ or Fortran.
     <br/>
-    <strong>Maintainer: <a href="{{site.github_url}}/matlab-novice-inflammation">Programming with MATLAB</a></strong>
+    <strong>Maintainer: <a href="{{site.github_url}}/matlab-novice-inflammation">Programming with MATLAB</a>, 
+    <a href="{{site.github_url}}/shell-novice">The Unix Shell</a></strong>
 </p>
