--- a/_includes/people/telenczuk_bartosz.html
+++ b/_includes/people/telenczuk_bartosz.html
@@ -1,7 +1,8 @@
 <p id="telenczuk_bartosz" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/telenczuk_bartosz.jpg' alt='Bartosz Telenczuk' />">
-    <a href="http://neurosience.telenczuk.pl" class="person">Bartosz
+    <a href="http://neuroscience.telenczuk.pl" class="person">Bartosz
     Teleńczuk</a> is a computational neuroscientists and committed
     Pythonista. He has been advocating and teaching Free/Open Source
-    Software in academia and non-profit organisations for the last 15
-    years.
+    Software in academia and non-profit organisations for 15+ years.
+    He holds a PhD in theoretical
+    biophysics from Humboldt University of Berlin.
 </p>
